--- a/form.html
+++ b/form.html
@@ -25,11 +25,11 @@
     <div class="fl" style="font-size: xx-large;padding-left: 0.8em;">
         <form action="" method="post" >
             <label for="male">Question 1) SQL stands for -</label><br>
-            <input type="radio" id="q1" name="q" value="HighText Machine Language">
+            <input type="radio" id="q1" name="q" value="Standard Query Language">
             <label for="male">Standard Query Language</label><br>
-            <input type="radio" id="q2" name="q" value="HyperText and links Markup Language">
+            <input type="radio" id="q2" name="q" value="Strong Query Language">
             <label for="female">Strong Query Language</label><br>
-            <input type="radio" id="q3" name="q" value="HyperText Markup Language">
+            <input type="radio" id="q3" name="q" value="Structured Query Language">
             <label for="female">Structured Query Language</label><br>
             <input type="radio" id="q4" name="q" value="None of these">
             <label for="female">None of these</label><br> <br>
